--- a/templates/edit_ws.html
+++ b/templates/edit_ws.html
@@ -22,7 +22,7 @@
 
         <ul>
             <li><a href="/add_resource/{{form_data["worksheet_id"]}}" data-rel="dialog" data-transition="slidedown">Add Resource</a></li>
-            <li><a href="/add_material/{{form_data["worksheet_id"]}}" data-rel="dialog" data-transition="slidedown">Add Materials</a></li>
+            <li><a href="/add_material/{{form_data["worksheet_id"]}}" data-rel="dialog" data-transition="slidedown">Add Material</a></li>
         </ul>
     </div><!-- /navbar -->
 </div><!-- /header -->
