Removed some old junk

--- a/templates/edit_ws.html
+++ b/templates/edit_ws.html
@@ -11,11 +11,7 @@
     <h1>Project: {{form_data["project_name"]}} &ensp;-&ensp; Worksheet date: {{form_data["date"]}}</h1>
 
 
-    <button type="submit" name="close" value= "close" class="ui-shadow ui-icon-delete ui-btn-icon-left ui-btn ui-btn-left ui-corner-all ui-mini">Close</button>
-    <!--- Old buttons
-    <a href="/save/close" data-icon="back" class="ui-btn-left" >Close</a>
-    <a href="/save" data-icon="check" class="ui-btn-right">Save</a>
-    -->
+    <button type="submit" name="close" value= "close" class="ui-shadow ui-icon-delete ui-btn-icon-left ui-btn ui-btn-left ui-corner-all ui-mini">Cancel/Close</button>
     <button type="submit" name="save" value="save" class="ui-shadow ui-icon-check ui-btn-icon-right ui-btn ui-btn-right ui-corner-all ui-mini">Save</button>
 
     <div data-role="navbar" data-theme={{theme}}>
