--- a/templates/enter_new_job.html
+++ b/templates/enter_new_job.html
@@ -3,15 +3,15 @@
     <h2>Enter New Job Details:</h2>
         <form class="form-horizontal" value="form" action="add_new_job" method="POST">
           <div class="form-group">
-            <label class="control-label col-sm-2" for="hco">Hiring Company *:</label>
+            <label class="control-label col-sm-2" for="hco">Customer Name *:</label>
             <div class="col-sm-10">
               <input type="text" class="form-control" name="hco" id="hco" placeholder="Company Name">
             </div>
           </div>
           <div class="form-group">
-            <label class="control-label col-sm-2" for="ttype">Truck Type *:</label>
+            <label class="control-label col-sm-2" for="ttype">Job Name *:</label>
             <div class="col-sm-10"> 
-              <input type="text" class="form-control" name="ttype" id="ttype" placeholder="Type of truck needed">
+              <input type="text" class="form-control" name="ttype" id="ttype" placeholder="Job name and description">
             </div>
           </div>
           <div class="form-group">
