--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -3,10 +3,11 @@
     <div data-role="page" data-theme={{theme}}>
         <div data-role="header" style="overflow:hidden;" data-theme={{theme}}>
             <h1>{{page_header}}</h1>
+            <a href="/index" data-icon="home" class="ui-btn-left">Home</a>
             <a href="/enter_key" data-icon="gear" class="ui-btn-right" data-rel="dialog" data-transition="slidedown">Options</a>
             <div data-role="navbar" data-theme={{theme}}>
                 <ul>
-                    <li><a href="new_job" data-rel="dialog" data-transition="slidedown">New Job</a></li>
+                    <li><a href="add_job" data-rel="dialog" data-transition="slidedown">Add a Job</a></li>
                     <!-- <li><a href="select_ws_open" data-rel="dialog" data-transition="slidedown">Edit job stuff</a></li> -->
                 </ul>
             </div><!-- /navbar -->
