--- a/templates/select_job_add_ws.html
+++ b/templates/select_job_add_ws.html
@@ -16,8 +16,6 @@
         {% endfor %}
 
     </ul>
-
-<p></p>
     <!--<a href="index.html"  class="ui-mini ui-btn ui-btn-{{theme_cancel}} ui-icon-delete ui-btn-icon-top ui-corner-all" >Cancel</a>
     -->
-    </div><!-- /content -->
+</div>
