--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
             <a href="/enter_key" data-icon="gear" class="ui-btn-right" data-rel="dialog" data-transition="slidedown">Options</a>
             <div data-role="navbar" data-theme={{theme}}>
                 <ul>
-                    <li><a href="select_jobs_open" data-rel="dialog" data-transition="slidedown">New</a></li>
-                    <li><a href="select_ws_open" data-rel="dialog" data-transition="slidedown">Edit</a></li>
+                    <li><a href="worksheets" data-transition="slidedown">Job Worksheets</a></li>
+                    <li><a href="jobs" data-transition="slidedown">Jobs Admin</a></li>
                 </ul>
             </div><!-- /navbar -->
         </div><!-- /header -->
