--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
             <a href="/enter_key" data-icon="gear" class="ui-btn-right" data-rel="dialog" data-transition="slidedown">Options</a>
             <div data-role="navbar" data-theme={{theme}}>
                 <ul>
-                    <li><a href="worksheets" data-transition="slidedown">Job Worksheets</a></li>
+                    <li><a href="worksheets" data-transition="slidedown">Daily Worksheets</a></li>
                     <li><a href="jobs" data-transition="slidedown">Jobs Admin</a></li>
                 </ul>
             </div><!-- /navbar -->
