--- a/templates/edit_job.html
+++ b/templates/edit_job.html
@@ -34,10 +34,11 @@
             <label class="control-label col-sm-2" for="cname">Customer Name *:</label>
             <div class="col-sm-10">
               <select>
-    <option value="" disabled="disabled" selected="selected">Please select a customer</option>
-    <option value="1">One</option>
-    <option value="2">Two</option>
-</select>
+                <option value="" disabled="disabled" selected="selected">Please select a customer</option>
+                {% for record in records %}
+                  <option value={{ record[0] }}>{{ record[1] }}</option>
+                {% endfor %}
+              </select>
 
             </div>
           </div>
