--- a/templates/edit_job.html
+++ b/templates/edit_job.html
@@ -4,7 +4,7 @@
 <div data-role="page" data-theme={{theme}}>
 
 <form action="/save_job" method="post">
-<input type="hidden" name="this_id" value={{form_data["this_id"]}} />
+<input type="hidden" name="job_id" value={{records[0][8]}} />
 
 
 <div data-role="header" style="overflow:hidden;" data-theme={{theme}}>
@@ -39,7 +39,7 @@
           </div>
           </p>
           <p>
-          <div class="form-group">
+          <!-- <div class="form-group">
             <label class="control-label col-sm-2" for="sdate">Start Date:</label>
             <div class="col-sm-10">
               <input type="text" class="form-control" name="sdate" id="sdate" value="{{records[0][3]}}">
@@ -52,7 +52,7 @@
             <div class="col-sm-10">
               <input type="text" class="form-control" name="edate" id="edate" value="{{records[0][4]}}">
             </div>
-          </div>
+          </div> -->
           </p>
           <p>
           <div class="form-group">
@@ -74,7 +74,7 @@
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
               <button type="cancel" class="btn btn-default ui-btn-{{theme_cancel}}" name="button" value="cancel">Cancel</button>
-              <button type="submit" class="btn btn-default" name="button" value="save">Save</button>
+              <button type="submit" class="btn btn-default" name="button" value="save">Save and Exit</button>
             </div>
           </div>
         </form>
