--- a/templates/edit_job.html
+++ b/templates/edit_job.html
@@ -9,27 +9,21 @@
 
 <div data-role="header" style="overflow:hidden;" data-theme={{theme}}>
     <h1>Customer: {{records[0][1]}}</h1>
-
-
-<!--     <button type="cancel" name="close" value= "cancel" class="ui-shadow ui-icon-delete ui-btn-icon-top  ui-btn-b ui-corner-all ui-mini">Cancel/Close</button>
- -->
-    <!-- <button type="cancel" name="close" value= "close" class="ui-shadow ui-icon-delete ui-btn-icon-left ui-btn ui-corner-all ui-mini">Cancel/Close</button> -->
-
-<!--     <button type="submit" name="save" value="save" class="ui-shadow ui-icon-check ui-btn-icon-right ui-btn ui-btn-right ui-corner-all ui-mini">Save</button>
- -->
     <div data-role="navbar" data-theme={{theme}}>
-
-<!--         <ul>
-            <li><a href="/add_resource/{{form_data["worksheet_id"]}}" data-rel="dialog" data-transition="slidedown">Add Resource</a></li>
-            <li><a href="/add_material/{{form_data["worksheet_id"]}}" data-rel="dialog" data-transition="slidedown">Add Material</a></li>
-        </ul>
  -->    </div><!-- /navbar -->
 </div><!-- /header -->
 
 <!-- <body> -->
     <div class="container">
-    <!-- <h2>Enter Job Details:</h2> -->
+        <p>
         <form class="form-horizontal" value="form" action="/save_job" method="POST">
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="jname">Job Name *:</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" name="jname" id="jname" value="{{records[0][2]}}">
+              </div>
+            </div>
+        </p>
           <p>
           <div class="form-group">
             <label class="control-label col-sm-2" for="jname">Job Name *:</label>
